--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <header>
 		<h1>Ez az első pull és push API-val</h1>
 	</header>
-    <main></main>
+    <main>
+	<h1>Ez az első pull és push API-val</h1>
+	<p>Ez az első pull és push API-val</p>
+	</main>
 </body>
 </html>
